implement 06-massive-chat-loom: virtual threads per connection, chat rooms, concurrent harness (16 threads)
Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>